<resources>
    <string name="app_name">Focus</string>
    <string name="title_activity_main2">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Calendar</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_relation">Friend Requests</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_book">Books</string>
    <string name="menu_goal">Goals</string>
    <string name="menu_timer">Timer</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string-array name="subjectspinneroptions">
        <item>English</item>
        <item>Maths</item>
        <item>Geography</item>
        <item>History </item>
        <item>Art</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Irish</item>
    </string-array>

    <string-array name="durationspinneroptions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="progress">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Failed</item>
    </string-array>

    <string-array name="year">
        <item>Total</item>
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>