<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic__library_books"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
    </group>

    <item android:title=" Actions">
        <menu>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Logout" />
        </menu>
    </item>
</menu>